testsuite/tests/parser/should_fail/pfail042.alan
hello() : proc
{
  if(3 == true)
    return;
}
