testsuite/tests/parser/should_fail/pfail042.stderr
pfail042.alan:3:11: Error: Parse error on input `true'
	Not a valid expression

